SERVER-65541 Fix coverity uninitialized member in CollectionScanNode